--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,14 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=22w15a
-	yarn_mappings=22w15a+build.6
-	loader_version=0.13.3
+	minecraft_version=1.19
+	yarn_mappings=1.19+build.1
+	loader_version=0.14.6
 
 # Mod Properties
-	mod_version = 0.22.15
+	mod_version = 1.19
 	maven_group = pub.bcb
 	archives_base_name = suppress-update-again
 
 # Dependencies
-	fabric_version=0.51.0+1.19
+	fabric_version=0.55.1+1.19
